# airtable-chat-2

./: .gitignore  README.md  postCreateCommand.sh
.devcontainer/: cleanup_containers.sh  devcontainer.json
backend/: Dockerfile  main.py  notes.md  pyproject.toml  requirements.txt
backend/app/api/routers/: chat.py  events.py  models.py
backend/app/engine/: __init__.py  generate.py  index.py  prompts.py  semantic_indexer.py  vector_store.py
frontend/: airtable-chat-2.code-workspace  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/components/: header.tsx
frontend/app/components/ui/chat/: chat-input.tsx
frontend/app/components/ui/chat/chat-message/: chat-avatar.tsx
frontend/app/components/ui/chat/hooks/: use-config.ts
infra/: .gitignore  app.py  notes.md  pyproject.toml  requirements.txt
infra/infra/: backend_deployment_stack.old  backend_deployment_stack.py  backend_stack.old  backend_stack.py
infra/notes/: cicd.md
